# bevy_jam2

./: .gitattributes  .gitignore  Cargo.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: general.yml
assets/sprites/character/: character.xcf
assets/sprites/character/skills/: doublejump_cloud.xcf  ice_projectile.xcf
assets/sprites/enemies/: ghost.xcf  skull.xcf  slime.xcf
assets/sprites/items/: book.xcf  dirt_projectile.xcf  earth.xcf  fire.xcf  ice.xcf  steam.xcf  stone.xcf  water.xcf
assets/sprites/world/: checkpoint.xcf  combine_altar.xcf  crosshair.xcf  door.xcf  gate.xcf  itemtree_item_bg.xcf  lantern.xcf  pentagram.xcf  platform.xcf  ranks.xcf  reset_items.xcf  return_button.xcf  wall_32x32.xcf  water_platform.xcf  world.xcf
assets/sprites/world/pillar/: pillar.xcf
assets/sprites/world/tileset/: floor.xcf  lavasnake.xcf  platform.xcf  solid_brick.xcf  solid_bricks.xcf
data/maps/: .main.toml.kate-swp  border_color_scheme.xcf  main.toml
data/maps/sections/checkpoint/: checkpoint.xcf  room.toml
data/maps/sections/demo/: section.toml
data/maps/sections/tutorial/: room0.xcf  section.toml
src/: asset_loaders.rs  assets.rs  camera.rs  checkpoint.rs  collision.rs  combat.rs  cursor.rs  embed_io.rs  enemies.rs  main.rs  map.rs  maps.rs  physics.rs  player.rs  util.rs
src/asset_loaders/: cache.rs  maps.rs
src/assets/: embed_io.rs  maps.rs
src/enemies/: slime.rs
src/map/: connections.rs
src/player/: abilities.rs
src/player/abilities/: collectibles.rs  skills.rs
src/player/abilities/skills/: crouch.rs  dash.rs  double_jump.rs  (+1 more)
(+70 files in other folders)
