[package]
name = "bevy_jam2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }

# Error handling
thiserror = "1.0.32"
anyhow = "1.0.62"

# IO
rust-embed = "6.4.0"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
